--- a/dapi/test/fixtures/enqs.yml
+++ b/dapi/test/fixtures/enqs.yml
@@ -4,63 +4,86 @@
 # 動作確認データ
 status1:
   uuid: EnqStatus1
-  message: メッセージ
-  button_text: ボタン
+  status: 1
 
 status1_first:
   uuid: EnqStatus1First
-  message: メッセージ
-  button_text: ボタン
+  status: 1
 
+# アンケートを作成中
+status0:
+  uuid: EnqStatus0
+  status: 0
+
+# アンケート作成完了
+status9:
+  uuid: EnqStatus9
+  status: 9
 
 # nil動作確認用
 nullable:
   uuid: EnqNullable
-  message: メッセージ
-  button_text: ボタン
+  status: 1
 
 nullable_first_1:
   uuid: EnqNullableFirst1
-  message: メッセージ
-  button_text: ボタン
+  status: 1
   
 nullable_first_2:
   uuid: EnqNullableFirst2
-  message: メッセージ
-  button_text: ボタン
+  status: 1
 
 nullable_first_3:
   uuid: EnqNullableFirst3
-  message: メッセージ
-  button_text: ボタン
+  status: 1
 
 # 空回答確認用
 null_answer:
   uuid: EnqNullAnswer
-  message: メッセージ
-  button_text: ボタン
+  status: 1
   
 # 異常系の確認用データ
 # アンケートの最初のページがNull
 first_page_null:
   uuid: FirstPageNullEnqID
-  message: メッセージ
-  button_text: ボタン
+  status: 1
 
 first_page_id_null:
   uuid: FirstPageIDNullEnqID
-  message: メッセージ
-  button_text: ボタン
+  status: 1
+
+# キャンペーンの状態が入稿前
+camp_status0:
+  uuid: CampaignStatus0EnqID
+  status: 1
 
 # キャンペーンの状態が終了
 camp_closed:
   uuid: CampaignClosedEnqID
-  message: メッセージ
-  button_text: ボタン
+  status: 1
 
 # 設問と選択肢が矛盾している
 incons_question:
   uuid: InconsistencyQuestionEnqID
-  message: メッセージ
-  button_text: ボタン
+  status: 1
 
+
+# 養命酒
+yomei_shu:
+  uuid: YomeiShuEnqID
+  status: 1
+
+# プラスワン
+plus_one:
+  uuid: PlusOneEnqID
+  status: 1
+
+# レッグマジックX
+legmagicX:
+  uuid: LegMagicXEnqID
+  status: 1
+
+# 永谷園
+nagatani_en:
+  uuid: NagataniEnEnqID
+  status: 1
