--- a/dapi/test/fixtures/campaign_faces.yml
+++ b/dapi/test/fixtures/campaign_faces.yml
@@ -1,18 +1,196 @@
 # coding: utf-8
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
 
-campaign_success_1_sp:
-  uuid: CampaginFace1
-  campaign_id: CampaignSuccessConfirm
+# APIテスト用データ
+# スマートフォン用
+# 動作確認用データ
+success_confirm_sp:
+  uuid: SuccessConfirmSPCampaginFaceID
+  campaign_id: SuccessConfirmCampaignID
   face: SP
   css: /css/sp/themes/sample-1/style.css
-  title: タイトルSP
-  description: 説明SP
+  title: タイトルSCSP
+  description: 説明SCSP
 
-campaign_success_1_pc:
-  uuid: CampaginFace1
-  campaign_id: CampaignSuccessConfirm
+# nil動作確認用のデータ
+nullable_sp:
+  uuid: NullableSPCampaginFaceID
+  campaign_id: NullableCampaignID
+  face: SP
+
+# 空回答確認用
+null_answer_sp:
+  uuid: NullAnswerSPCampaginFaceID
+  campaign_id: NullAnswerCampaignID
+  face: SP
+  css: /css/sp/themes/sample-1/style.css
+  title: タイトルNASP
+  description: 説明NASP
+
+# 異常系の確認用データ
+# アンケートの最初のページがNull
+first_page_null_sp:
+  uuid: FirstPageNullSPCampaginFaceID
+  campaign_id: FirstPageNullCampaignID
+  face: SP
+  css: /css/sp/themes/sample-1/style.css
+  title: タイトルFPNSP
+  description: 説明FPNSP
+
+first_page_id_null_sp:
+  uuid: FirstPageIDNullSPCampaginFaceID
+  campaign_id: FirstPageIDNullCampaignID
+  face: SP
+  css: /css/sp/themes/sample-1/style.css
+  title: タイトルFPIDNSP
+  description: 説明FPIDNSP
+
+# キャンペーンが終了日時を過ぎている
+camp_closed_sp:
+  uuid: CampaignClosedSPCampaginFaceID
+  campaign_id: CampaignClosedCampaignID
+  face: SP
+  css: /css/sp/themes/sample-1/style.css
+  title: タイトルCCSP
+  description: 説明CCSP
+
+# 設問と選択肢が矛盾している
+incons_question_sp:
+  uuid: InconsistencyQuestionSPCampaginFaceID
+  campaign_id: InconsistencyQuestionCampaignID
+  face: SP
+  css: /css/sp/themes/sample-1/style.css
+  title: タイトルIQSP
+  description: 説明IQSP
+  
+# PC用
+# 動作確認用データ
+success_confirm_pc:
+  uuid: SuccessConfirmPCCampaginFaceID
+  campaign_id: SuccessConfirmCampaignID
   face: PC
   css: /css/pc/themes/sample-1/style.css
-  title: タイトルPC
-  description: 説明PC
+  title: タイトルSCPC
+  description: 説明SCPC
+
+# nil動作確認用のデータ
+nullable_pc:
+  uuid: NullablePCCampaginFaceID
+  campaign_id: NullableCampaignID
+  face: PC
+
+# 空回答確認用
+null_answer_pc:
+  uuid: NullAnswerPCCampaginFaceID
+  campaign_id: NullAnswerCampaignID
+  face: PC
+  css: /css/pc/themes/sample-1/style.css
+  title: タイトルNAPC
+  description: 説明NAPC
+
+# 異常系の確認用データ
+# アンケートの最初のページがNull
+first_page_null_pc:
+  uuid: FirstPageNullPCCampaginFaceID
+  campaign_id: FirstPageNullCampaignID
+  face: PC
+  css: /css/pc/themes/sample-1/style.css
+  title: タイトルFPNPC
+  description: 説明FPNPC
+
+first_page_id_null_pc:
+  uuid: FirstPageIDNullPCCampaginFaceID
+  campaign_id: FirstPageIDNullCampaignID
+  face: PC
+  css: /css/pc/themes/sample-1/style.css
+  title: タイトルFPIDNPC
+  description: 説明FPIDNPC
+
+# キャンペーンが終了日時を過ぎている
+camp_closed_pc:
+  uuid: CampaignClosedPCCampaginFaceID
+  campaign_id: CampaignClosedCampaignID
+  face: PC
+  css: /css/pc/themes/sample-1/style.css
+  title: タイトルCCPC
+  description: 説明CCPC
+
+# 設問と選択肢が矛盾している
+incons_question_pc:
+  uuid: InconsistencyQuestionPCCampaginFaceID
+  campaign_id: InconsistencyQuestionCampaignID
+  face: PC
+  css: /css/pc/themes/sample-1/style.css
+  title: タイトルIQPC
+  description: 説明IQPC
+
+
+# 案件テスト用データ
+# 養命酒
+yomei_shu_sp:
+  uuid: YomeiShuSPCampaginFaceID
+  campaign_id: YomeiShuCampaignID
+  face: SP
+  css: /css/sp/themes/sample-1/style.css
+  title: 
+  description: 
+
+yomei_shu_pc:
+  uuid: YomeiShuPCCampaginFaceID
+  campaign_id: YomeiShuCampaignID
+  face: PC
+  css: /css/pc/themes/sample-1/style.css
+  title: 
+  description: 
+
+# プラスワン
+plus_one_sp:
+  uuid: PlusOneSPCampaginFaceID
+  campaign_id: PlusOneCampaignID
+  face: SP
+  css: /css/sp/themes/plus1/style.css
+  title: 
+  description: 
+
+plus_one_pc:
+  uuid: PlusOnePCCampaginFaceID
+  campaign_id: PlusOneCampaignID
+  face: PC
+  css: /css/pc/themes/plus1/style.css
+  title: 
+  description: 
+
+# レッグマジックX
+legmagicX_sp:
+  uuid: LegMagicXSPCampaginFaceID
+  campaign_id: LegMagicXCampaignID
+  face: SP
+  css: /css/sp/themes/lgmx/style.css
+  title: 
+  description: 
+
+legmagicX_pc:
+  uuid: LegMagicXPCCampaginFaceID
+  campaign_id: LegMagicXCampaignID
+  face: PC
+  css: /css/pc/themes/lgmx/style.css
+  title: 
+  description: 
+
+# 永谷園
+nagatanien_sp:
+  uuid: NagatanienSPCampaginFaceID
+  campaign_id: NagatanienCampaignID
+  face: SP
+  css: /css/sp/themes/nagatanien/style.css
+  title: 
+  description: 
+
+nagatanien_pc:
+  uuid: NagatanienPCCampaginFaceID
+  campaign_id: NagatanienCampaignID
+  face: PC
+  css: /css/pc/themes/nagatanien/style.css
+  title: 
+  description: 
+
