--- a/dapi/test/fixtures/movies.yml
+++ b/dapi/test/fixtures/movies.yml
@@ -147,32 +147,329 @@ incons_question_mp4:
   src: /video/plus1/plus1.mp4
   duration: 47
 
+# レッグマジック
+legmagicX_m3u8:
+  uuid: LegMagicXM3U8MovieID
+  campaign_id: LegMagicXCampaignID
+  mime_type: application/x-mpegURL
+  src: /video/lgmx/lgmx.m3u8
+  duration: 150
+
+legmagicX_flv:
+  uuid: LegMagicXFLVMovieID
+  campaign_id: LegMagicXCampaignID
+  mime_type: video/x-flv
+  src: /video/lgmx/lgmx.flv
+  duration: 150
+
+legmagicX_mp4:
+  uuid: LegMagicXMP4MovieID
+  campaign_id: LegMagicXCampaignID
+  src: /video/lgmx/lgmx.mp4
+  duration: 150
+
+legmagic_A_m3u8:
+  uuid: LegMagicAM3U8MovieID
+  campaign_id: LegMagicACampaignID
+  mime_type: application/x-mpegURL
+  src: /video/lgmx/lgmx.m3u8
+  duration: 150
+
+legmagic_A_flv:
+  uuid: LegMagicAFLVMovieID
+  campaign_id: LegMagicACampaignID
+  mime_type: video/x-flv
+  src: /video/lgmx/lgmx.flv
+  duration: 150
+
+legmagic_A_mp4:
+  uuid: LegMagicAMP4MovieID
+  campaign_id: LegMagicXCampaignID
+  src: /video/lgmx/lgmx.mp4
+  duration: 150
+
+legmagic_B_m3u8:
+  uuid: LegMagicBM3U8MovieID
+  campaign_id: LegMagicBCampaignID
+  mime_type: application/x-mpegURL
+  src:/video/lgmx/lgmx.m3u8
+  duration: 150
+
+legmagic_B_flv:
+  uuid: LegMagicBFLVMovieID
+  campaign_id: LegMagicBCampaignID
+  mime_type: video/x-flv
+  src: /video/lgmx/lgmx.flv
+  duration: 150
+
+legmagic_B_mp4:
+  uuid: LegMagicBMP4MovieID
+  campaign_id: LegMagicBCampaignID
+  src: /video/lgmx/lgmx.mp4
+  duration: 150
+
+# パワープランニング
+power_planning_m3u8:
+  uuid: PowerPlanningM3U8MovieID
+  campaign_id: PowerPlanningCampaignID
+  mime_type: application/x-mpegURL
+  src: /video/powerplaning/movie.m3u8
+  duration: 0
+
+power_planning_flv:
+  uuid: PowerPlanningFLVMovieID
+  campaign_id: PowerPlanningCampaignID
+  mime_type: video/x-flv
+  src: /video/powerplaning/movie.flv
+  duration: 0
+
+power_planning_mp4:
+  uuid: PowerPlanningMP4MovieID
+  campaign_id: PowerPlanningCampaignID
+  src: /video/powerplaning/movie.mp4
+  duration: 0
+
+power_planning_A_m3u8:
+  uuid: PowerPlanningAM3U8MovieID
+  campaign_id: PowerPlanningACampaignID
+  mime_type: application/x-mpegURL
+  src: /video/powerplaning/movie.m3u8
+  duration: 0
+
+power_planning_A_flv:
+  uuid: PowerPlanningAFLVMovieID
+  campaign_id: PowerPlanningACampaignID
+  mime_type: video/x-flv
+  src: /video/powerplaning/movie.flv
+  duration: 0
+
+power_planning_A_mp4:
+  uuid: PowerPlanningAMP4MovieID
+  campaign_id: PowerPlanningACampaignID
+  src: /video/powerplaning/movie.mp4
+  duration: 0
+
+power_planning_B_m3u8:
+  uuid: PowerPlanningBM3U8MovieID
+  campaign_id: PowerPlanningBCampaignID
+  mime_type: application/x-mpegURL
+  src: /video/powerplaning/movie.m3u8
+  duration: 0
+
+power_planning_B_flv:
+  uuid: PowerPlanningBFLVMovieID
+  campaign_id: PowerPlanningBCampaignID
+  mime_type: video/x-flv
+  src: /video/powerplaning/movie.flv
+  duration: 0
+
+power_planning_B_mp4:
+  uuid: PowerPlanningBMP4MovieID
+  campaign_id: PowerPlanningBCampaignID
+  src: /video/powerplaning/movie.mp4
+  duration: 0
+
+# ヤーマン
+ya_man_m3u8:
+  uuid: YaManM3U8MovieID
+  campaign_id: YaManCampaignID
+  mime_type: application/x-mpegURL
+  src: /video/ya-man/movie.m3u8
+  duration: 0
+
+ya_man_flv:
+  uuid: YaManFLVMovieID
+  campaign_id: YaManCampaignID
+  mime_type: video/x-flv
+  src: /video/ya-man/movie.flv
+  duration: 0
+
+ya_man_mp4:
+  uuid: YaManFLVMP4MovieID
+  campaign_id: YaManCampaignID
+  src: /video/ya-man/movie.mp4
+  duration: 0
+
+ya_man_A_m3u8:
+  uuid: YaManAM3U8MovieID
+  campaign_id: YaManACampaignID
+  mime_type: application/x-mpegURL
+  src: /video/ya-man/movie.m3u8
+  duration: 0
+
+ya_man_A_flv:
+  uuid: YaManAFLVMovieID
+  campaign_id: YaManACampaignID
+  mime_type: video/x-flv
+  src: /video/ya-man/movie.flv
+  duration: 0
+
+ya_man_A_mp4:
+  uuid: YaManFLVAMP4MovieID
+  campaign_id: YaManACampaignID
+  src: /video/ya-man/movie.mp4
+  duration: 0
+
+ya_man_B_m3u8:
+  uuid: YaManBM3U8MovieID
+  campaign_id: YaManBCampaignID
+  mime_type: application/x-mpegURL
+  src: /video/ya-man/movie.m3u8
+  duration: 0
+
+ya_man_B_flv:
+  uuid: YaManBFLVMovieID
+  campaign_id: YaManBCampaignID
+  mime_type: video/x-flv
+  src: /video/ya-man/movie.flv
+  duration: 0
+
+ya_man_B_mp4:
+  uuid: YaManBMP4MovieID
+  campaign_id: YaManBCampaignID
+  src: /video/ya-man/movie.mp4
+  duration: 0
 
 # 養命酒
 yomei_shu_m3u8:
   uuid: YomeiShuM3U8MovieID
   campaign_id: YomeiShuCampaignID
   mime_type: application/x-mpegURL
-  src: /video/plus1/plus1.m3u8
-  duration: 47
+  src: /video/yomeishu/movie.m3u8
+  duration: 0
 
 yomei_shu_flv:
   uuid: YomeiShuFLVovieID
   campaign_id: YomeiShuCampaignID
   mime_type: video/x-flv
-  src: /video/plus1/plus1.flv
-  duration: 47
+  src: /video/yomeishu/movie.flv
+  duration: 0
 
 yomei_shu_mp4:
   uuid: YomeiShuMP4MovieID
   campaign_id: YomeiShuCampaignID
-  src: /video/plus1/plus1.mp4
-  duration: 47
+  src: /video/yomeishu/movie.mp4
+  duration: 0
 
+yomei_shu_A_m3u8:
+  uuid: YomeiShuAM3U8MovieID
+  campaign_id: YomeiShuACampaignID
+  mime_type: application/x-mpegURL
+  src: /video/yomeishu/movie.m3u8
+  duration: 0
+
+yomei_shu_A_flv:
+  uuid: YomeiShuAFLVovieID
+  campaign_id: YomeiShuACampaignID
+  mime_type: video/x-flv
+  src: /video/yomeishu/movie.flv
+  duration: 0
+
+yomei_shu_A_mp4:
+  uuid: YomeiShuAMP4MovieID
+  campaign_id: YomeiShuACampaignID
+  src: /video/yomeishu/movie.mp4
+  duration: 0
+
+yomei_shu_B_m3u8:
+  uuid: YomeiShuBM3U8MovieID
+  campaign_id: YomeiShuBCampaignID
+  mime_type: application/x-mpegURL
+  src: /video/yomeishu/movie.m3u8
+  duration: 0
+
+yomei_shu_B_flv:
+  uuid: YomeiShuBFLVovieID
+  campaign_id: YomeiShuBCampaignID
+  mime_type: video/x-flv
+  src: /video/yomeishu/movie.flv
+  duration: 0
+
+yomei_shu_B_mp4:
+  uuid: YomeiShuBMP4MovieID
+  campaign_id: YomeiShuBCampaignID
+  src: /video/yomeishu/movie.mp4
+  duration: 0
 
 # プラスワン
-plus_one:
+plus_one_m3u8:
+  uuid: PlusOneM3U8MovieID
+  campaign_id: PlusOneCampaignID
+  mime_type: application/x-mpegURL
+  src: /video/plus1/movie.m3u8
+  duration: 47
 
-# レッグマジックX
-legmagicX:
+plus_one_flv:
+  uuid: PlusOneFLVovieID
+  campaign_id: PlusOneCampaignID
+  mime_type: video/x-flv
+  src: /video/plus1/movie.flv
+  duration: 47
+
+plus_one_mp4:
+  uuid: PlusOneMP4MovieID
+  campaign_id: PlusOneCampaignID
+  src: /video/plus1/movie.mp4
+  duration: 47
+
+plus_one_A_m3u8:
+  uuid: PlusOneAM3U8MovieID
+  campaign_id: PlusOneACampaignID
+  mime_type: application/x-mpegURL
+  src: /video/plus1/movie.m3u8
+  duration: 47
+
+plus_one_A_flv:
+  uuid: PlusOneAFLVovieID
+  campaign_id: PlusOneACampaignID
+  mime_type: video/x-flv
+  src: /video/plus1/movie.flv
+  duration: 47
+
+plus_one_A_mp4:
+  uuid: PlusOneAMP4MovieID
+  campaign_id: PlusOneACampaignID
+  src: /video/plus1/movie.mp4
+  duration: 47
+
+plus_one_B_m3u8:
+  uuid: PlusOneBM3U8MovieID
+  campaign_id: PlusOneBCampaignID
+  mime_type: application/x-mpegURL
+  src: /video/plus1/movie.m3u8
+  duration: 47
+
+plus_one_B_flv:
+  uuid: PlusOneBFLVovieID
+  campaign_id: PlusOneBCampaignID
+  mime_type: video/x-flv
+  src: /video/plus1/movie.flv
+  duration: 47
+
+plus_one_B_mp4:
+  uuid: PlusOneBMP4MovieID
+  campaign_id: PlusOneBCampaignID
+  src: /video/plus1/movie.mp4
+  duration: 47
+
+# 永谷園
+nagatanien_m3u8:
+  uuid: NagatanienM3U8MovieID
+  campaign_id: NagatanienCampaignID
+  mime_type: application/x-mpegURL
+  src: /video/nagatanien/movie.m3u8
+  duration: 47
+
+nagatanien_flv:
+  uuid: NagatanienFLVovieID
+  campaign_id: NagatanienCampaignID
+  mime_type: video/x-flv
+  src: /video/nagatanien/movie.flv
+  duration: 47
+
+nagatanien_mp4:
+  uuid: NagatanienMP4MovieID
+  campaign_id: NagatanienCampaignID
+  src: /video/nagatanien/movie.mp4
+  duration: 47
 
